# MultiLog

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md
include/: appender.h  appender_file.h  log_config.h  log_event.h  log_stamp.h  log_stream.h  log_type.h  log_utils.h  logger.h
src/: appender.cc  appender_file.cc  log_event.cc  log_stream.cc  log_type.cc  logger.cc
test/basic_test/: basic_test.cc
test/stress_test/: stress_test.cc
test/thread_test/: thread_test.cc
